# MercuryDPM_fork

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PostponedFromAlphaToTrunk  bitbucket-pipelines.yml  releaseNotes1.0.0.Alpha.md  update_license.sh
CMakeModules/oomph/: CMakeLists.txt
Drivers/: CMakeLists.txt
Drivers/AdvancedTutorials/: T_protectiveWall.cpp
Drivers/Avalanching/: Beger.cpp  CMakeLists.txt  ContinuousTilt.cpp  SteppedTilt.cpp
Drivers/BoundaryStatistics/: H10A24L1M0.5B0.5.restart  snapshot.cpp  statXY.cpp  statXZ.cpp  static2d.cpp  static2dSegregated.cpp  static3d.cpp
Drivers/Calibration/: CMakeLists.txt  Calibration.h  CalibrationDrum.cpp  CalibrationHeap.cpp  CalibrationPrecompression.cpp  CalibrationShearCell.cpp  CalibrationShearStage.cpp  CalibrationTest.cpp  Particles2023AnalysisHung.py  README.md  TestCalibration.cpp
Drivers/CartesianShearCell/: CMakeLists.txt  CSCInit.cpp  CSCRestart.cpp  CSCRun.cpp  CSCStats.cpp  CSCWalls.cpp  ClosedCSCRestart.cpp  ClosedCSCRun.cpp  ClosedCSCStats.cpp  ClosedCSCWalls.cpp  README.md
Drivers/Chute/: AirySavageHutter.cpp  CMakeLists.txt  ChuteWithWedge.cpp  ChuteWithWedgeLarge.cpp  FlowRuleRoughToSmooth.cpp  Lawine.cpp  LongPeriodicChute.cpp  VariableBottom.cpp  VariableBottomQuick.cpp  Vreman.cpp  VremanHopper.cpp  VremanRough.cpp  chute_demo_restart.cpp  chute_periodic.cpp  chute_periodic_autorun.cpp  chute_periodic_restart.cpp  flow_front.cpp  granular_jet.cpp  granular_jet_thomas.cpp  hopper_3d_demo.cpp  impact.cpp  restart.cpp  restartedChute.cpp  segregation.cpp  segregation_with_hopper.cpp  silbert.cpp  silbert_hstart_fast.cpp  silbert_rand.cpp  silbert_restart.cpp  silbert_restart2.cpp  statisticsTest.cpp
Drivers/ChuteDemos/: AirySavageHutter.cpp  AxisymmetricHopper.h  AxisymmetricHopperSelfTest.cpp  CMakeLists.txt  ChuteDemo.cpp  ChutePeriodicDemo.cpp  ChuteRestartDemo.cpp  ChuteWithWedge.cpp  FlowFrontChute.cpp  HGridUpdateUnitTest.cpp  Hopper3dDemo.cpp  HopperSelfTest.cpp  MercuryLogo.cpp  MonodisperseSmoothInclinedChute.cpp  MonodisperseSmoothInclinedChutePatternInflow.cpp  granularJet.cpp  roughBottomSelfTest.cpp
Drivers/Clump/: CMakeLists.txt  ReadMe.txt
Drivers/Clusters/: CMakeLists.txt  RandomClusterInsertionBoundaryDemo.cpp
Drivers/CompareToStefan/: CMakeLists.txt  c3d.ini  elastic_gas.cpp  elastic_gas_with_gravity.cpp  free_cooling.cpp  restart2.cpp  xb
Drivers/Contraction/: CMakeLists.txt  ChuteWithPeriodicInflow.cpp  ChuteWithPeriodicInflow.h  ChuteWithPeriodicInflowAndContraction.cpp  ChuteWithPeriodicInflowAndVariableBottom.cpp  ChuteWithStdInflow.cpp  ContractionWithPeriodicInflow.cpp  PeriodicInflow2D.cpp  PeriodicInflow2D_Initiation.cpp  StrainingFlow.cpp
Drivers/Course/: CMakeLists.txt
Drivers/Demos/: CMakeLists.txt
Drivers/Dinant/: Compression.cpp  CyclicPureShear.cpp  Expansion.cpp  HGridCountCallsRun.cpp  HGridOptimiserTester.cpp  HGridPaperFreeCooling.cpp  HGridPaperFreeCoolingInitialConditions.cpp  KickAndRelax.cpp  LeesEdwards.cpp  Relax.cpp  SpeedTest_HgMD.cpp  create_initial_conditions_fixed_packing_fraction.cpp  create_initial_conditions_pressure_controlled.cpp  cyclic_simple_shear.cpp  dinant_growparticles.cpp  pure_shear_untill_jamming.cpp  rain.cpp
Drivers/Domino/: AutoDomino.cpp  Domino.cpp  DominoBatch.cpp
Drivers/FlowRulePaper/: AngleOfRepose.cpp  GlasPeriodic.h  Mercury3DRestart.cpp  SilbertPeriodic.h  SilbertPeriodicSelfTest.cpp  bidisperse.cpp  demoparams.cpp  flowRuleDiego_HeightAngle.cpp  flowRule_StudyHeightAngle.cpp  hstopGlass_StudyHeightHmaxAngle.cpp  hstopHertz_StudyHeightHmaxAngle.cpp  hstopSelfTest.cpp  hstop_StudyHeightHmaxAngle.cpp  hstop_StudyHeightHmaxAngle_exponential.cpp  hstop_StudyHeightHminAngle.cpp  livestatistics.cpp  restart.cpp  statistics_while_running.cpp  vibratedBed.cpp
Drivers/GranularJet/: CMakeLists.txt  ChuteWithVerticalHopper.h  Funnel.cc  Funnel.h  GranularJet.cpp  dec13_A254_Hi0075_RC06_MU05.cpp
Drivers/Graphics/: BaseFunctions.h  ChangeDomainDialog.cpp  ChangeDomainDialog.h  Graphics.cpp  GraphicsDrawingArea.cpp  GraphicsDrawingArea.h  GraphicsMainWindow.cpp  GraphicsMainWindow.h  ParticleInfoDialog.cpp  ParticleInfoDialog.h  ParticleInfoTab.cpp  ParticleInfoTab.h
Drivers/ImportTools/: BinaryReaderSTL1by1by1bySquareUnitTest.cpp  BinaryReaderSTLOneTriangleUnitTest.cpp  CMakeLists.txt
Drivers/Leidenfrost/: Binary.cpp  BinaryDensities.cpp  CMakeLists.txt  periodic.cpp  solid_walls.cpp
Drivers/MercuryCG/: CGBasicSelfTest.cpp  CGHandlerLargeSelfTest.cpp  CGHandlerRadialSelfTest.cpp  CGHandlerSelfTest.cpp  CGHandlerSelfTest.cppNew  CGSelectRegionSelfTest.cpp  CGStaticBalanceSelfTest.cpp  CMakeLists.txt  Chain.cpp  ConvertP4Files.cpp  CubicPackingSelfTest.cpp  MercuryCG.cpp  MercuryCG.txt  MercuryCGSelfTest.cpp  NewtonsCradleSelfTest.cpp  SplitFiles.cpp  SquarePackingSelfTest.cpp  centerofmass.cpp  fstatistics.cpp  liveStatistics.cpp  loadstatistics.m  p3statistics.cpp  p4statistics.cpp  readMercuryCG.m
Drivers/MercuryMPITests/: CMakeLists.txt  ForceLawsMPI2Test.cpp  InsertionBoundaryMPI2Test.cpp  (+7 more)
Kernel/: .gitignore  All.cc  BaseCluster.cc  BaseCluster.h  BaseHandler.h  BaseInteractable.cc  BaseInteractable.h  BaseObject.cc  BaseObject.h  BinaryReader.cc  BinaryReader.h  BoundaryHandler.cc  BoundaryHandler.h  CMakeLists.txt  Chute.cc  Chute.h  ChuteBottom.cc  ChuteBottom.h  ChuteWithHopper.cc  ChuteWithHopper.h  ClusterGenerator.cc  ClusterGenerator.h  CurvyChute.cc  CurvyChute.h  DPMBase.cc  DPMBase.h  DPMBaseXBalls.icc  Domain.cc  Domain.h  DomainHandler.cc  DomainHandler.h  File.cc  File.h  GeneralDefine.h  HGrid.cc  HGrid.h  HGridOptimiser.cc  HGridOptimiser.h  InteractionHandler.cc  InteractionHandler.h  (+31 more)
Tools/: CMakeLists.txt  CombineMultiTimeStepAllDataFiles.sh  CombineParallelDataFiles.cpp  CombineParallelOutFiles.py  CombineParallelRestartFiles.py  ComputeWallTorque.py  DotDict.py  Loadstatistics.py  MercuryData.h  MergeRestartFiles.py  ParticleAnalytics2Mercury.cpp  RemoveSubnormals.py  RestartToData.cpp  VTKData.h  data2pvd.cpp  plotPSD.py  read_mercury_cg.py
(+3706 files in other folders)
