add_subdirectory(UnitTests)
add_subdirectory(MercurySimpleDemos)
add_subdirectory(MercuryCG)
add_subdirectory(MercuryMPITests)
add_subdirectory(ChuteDemos)
add_subdirectory(SuperQuadricDemos)
#add_subdirectory(Tessa)
add_subdirectory(Tutorials)
#add_subdirectory(CompareToStefan)
#add_subdirectory(Leidenfrost)
#add_subdirectory(GranularJet)
#add_subdirectory(BoundaryStatistics)
#add_subdirectory(Marnix)
add_subdirectory(FlowRulePaper)
#add_subdirectory(Leah)
#add_subdirectory(Avalanching)
#add_subdirectory(CartesianShearCell)
#add_subdirectory(Contraction)
#add_subdirectory(Dinant)
#add_subdirectory(Sintering)
add_subdirectory(SinteringNew)
#add_subdirectory(Segregation)
#add_subdirectory(Siegen)
add_subdirectory(SpeedTest)

add_subdirectory(ParallelDrum)


#IFCD: If you want (a folder of) the USER directory to be built, mark it so in your ccmake or cmake-gui

if (Mercury_BUILD_USER_DIR)
    add_subdirectory(USER)
endif()
